# surya

./: pyproject.toml
surya/model/detection/: segformer.py
surya/model/ordering/: model.py
surya/model/recognition/: model.py
