[project]
name = "surya-ocr"
version = "0.4.14"
description = "OCR, layout, reading order, and line detection in 90+ languages"
authors = [
    {name = "Vik Paruchuri", email = "vik.paruchuri@gmail.com"},
]
dependencies = [
    "transformers>=4.42.3",
    "torch>=2.3.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "tabulate>=0.9.0",
    "filetype>=1.2.0",
    "ftfy>=6.2.0",
    "pypdfium2>=4.30.0",
    "torch-directml>=0.2.2.dev240614",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = [
    "ocr",
    "pdf",
    "text detection",
    "text recognition",
]
urls = {repository = "https://github.com/VikParuchuri/surya"}

[project.scripts]
surya_detect = "detect_text:main"
surya_ocr = "ocr_text:main"
surya_layout = "detect_layout:main"
surya_gui = "run_ocr_app:run_app"
surya_order = "reading_order:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = [
    "surya",
    "detect_text.py",
    "ocr_text.py",
    "ocr_app.py",
    "run_ocr_app.py",
    "detect_layout.py",
    "reading_order.py",
]
